# elodie

./: Dockerfile  npm-audit-report.json  package-lock.json  pyproject.toml  setup.py  validate-workflows.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-update.yml  docker.yml  docs-deploy.yml  electron-build.yml  github-packages.yml  markdown-link-check-config.json  release.yml  security-scan.yml
